# ckit

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  codecov.yaml  commands.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-poetry-env/: action.yml
ckit/: cli.py  command.py  command_group.py  core.py  group.py  utils.py
ckit/config/: common.py  config.py  config_files_initiatior.py  config_loader.py  yaml_parser.py
ckit/screens/: group_picker.py
configuration/: index.html
docs/: README.md  configuration.md  index.md  modules.md
peaks/: cli.py  command_group.py  core.py
peaks/config/: common.py  config.py  config_files_initiatior.py  config_loader.py  yaml_parser.py
peaks/screens/: picker.py
search/: search_index.json
skate/: cli.py  command.py  command_group.py  command_group_master.py  core.py
skate/config/: common.py  config.py  config_files_initiatior.py  config_loader.py  yaml_parser.py
skate/screens/: group_picker.py  pc2.py  pick_command.py  pick_group.py  picker.py
tests/: test_command.py  test_foo.py  test_group.py
tests/config/: test_common.py  test_config.py  test_config_files_initiator.py  test_config_loader.py  test_yaml_parser.py
