[tool.poetry]
name = "peaks"
version = "0.0.1"
description = "Organize and run frequently used commands"
authors = ["Florian Maas <fpgmaas@gmail.com>"]
repository = "https://github.com/fpgmaas/peaks"
documentation = "https://fpgmaas.github.io/peaks/"
readme = "README.md"
packages = [
  {include = "peaks"}
]

[tool.poetry.scripts]
peaks = "peaks.cli:peaks"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "^8.1.3"
pyyaml = "^6.0"
blessed = "^1.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["peaks"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["peaks"]

